--- a/dudu/MainView/ShoppingCart/View/ShopCartTableViewCell.xib
+++ b/dudu/MainView/ShoppingCart/View/ShopCartTableViewCell.xib
@@ -1,33 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="126" id="KGk-i7-Jjw" customClass="ShopCartTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="126"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="130" id="KGk-i7-Jjw" customClass="ShopCartTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="130"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="125.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="129.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="购物车商品选中" translatesAutoresizingMaskIntoConstraints="NO" id="4l8-1m-mxj">
-                        <rect key="frame" x="5" y="50" width="24" height="24"/>
+                        <rect key="frame" x="5" y="53" width="24" height="24"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="24" id="Rjl-uW-Kja"/>
                             <constraint firstAttribute="height" constant="24" id="ze4-BL-BIW"/>
                         </constraints>
                     </imageView>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KGk-hl-i60">
-                        <rect key="frame" x="0.0" y="0.0" width="34" height="126"/>
+                        <rect key="frame" x="0.0" y="0.0" width="34" height="129.5"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="34" id="VlH-oh-rlG"/>
                         </constraints>
@@ -93,7 +93,7 @@
                         <state key="normal" image="_"/>
                     </button>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mxq-bw-PNG">
-                        <rect key="frame" x="19" y="125" width="282" height="0.5"/>
+                        <rect key="frame" x="19" y="129" width="282" height="0.5"/>
                         <color key="backgroundColor" red="0.82745098039215681" green="0.82745098039215681" blue="0.82745098039215681" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="0.5" id="AFa-7c-C1t"/>
@@ -107,6 +107,21 @@
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" red="0.12549019610000001" green="0.85098039219999999" blue="0.58039215690000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yfL-9A-c3s">
+                        <rect key="frame" x="57" y="103" width="243" height="26"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                        <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="促销" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Ub-yT-kV7">
+                        <rect key="frame" x="14" y="110" width="33" height="15"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="33" id="gbz-3j-yhW"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                        <color key="textColor" red="0.95294117649999999" green="0.59215686270000001" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
@@ -132,9 +147,16 @@
                     <constraint firstItem="yBp-dn-bWg" firstAttribute="top" secondItem="ia6-VC-PQZ" secondAttribute="bottom" constant="1" id="eMA-dj-6DX"/>
                     <constraint firstItem="4l8-1m-mxj" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="f2v-8s-e9Z"/>
                     <constraint firstAttribute="trailing" secondItem="mxq-bw-PNG" secondAttribute="trailing" constant="19" id="gzU-zG-KOL"/>
+                    <constraint firstItem="yfL-9A-c3s" firstAttribute="leading" secondItem="0Ub-yT-kV7" secondAttribute="trailing" constant="10" id="kbO-kY-Ha5"/>
+                    <constraint firstItem="yfL-9A-c3s" firstAttribute="top" secondItem="qh5-hh-SOA" secondAttribute="bottom" id="lkE-Rd-fi9"/>
+                    <constraint firstItem="0Ub-yT-kV7" firstAttribute="leading" secondItem="KGk-hl-i60" secondAttribute="trailing" constant="-20" id="m2o-cd-DpK"/>
                     <constraint firstItem="PAb-10-vyr" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="mA9-0v-Tsc"/>
                     <constraint firstItem="KGk-hl-i60" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="mXX-3V-6gc"/>
+                    <constraint firstItem="mxq-bw-PNG" firstAttribute="top" secondItem="yfL-9A-c3s" secondAttribute="bottom" id="q9w-zq-LGR"/>
+                    <constraint firstItem="mxq-bw-PNG" firstAttribute="top" secondItem="0Ub-yT-kV7" secondAttribute="bottom" constant="4" id="qGb-Ww-qV8"/>
                     <constraint firstAttribute="trailing" secondItem="lBt-v1-3Gw" secondAttribute="trailing" constant="10" id="rPS-sv-ffo"/>
+                    <constraint firstAttribute="trailing" secondItem="yfL-9A-c3s" secondAttribute="trailing" constant="20" id="sAv-I7-N5p"/>
+                    <constraint firstItem="0Ub-yT-kV7" firstAttribute="top" secondItem="PAb-10-vyr" secondAttribute="bottom" constant="4" id="tnh-2s-EfS"/>
                     <constraint firstItem="auT-Ij-0Sg" firstAttribute="top" secondItem="ia6-VC-PQZ" secondAttribute="bottom" constant="7" id="usM-bw-KWA"/>
                     <constraint firstItem="auT-Ij-0Sg" firstAttribute="leading" secondItem="PAb-10-vyr" secondAttribute="trailing" constant="10" id="w9A-Qa-OF3"/>
                     <constraint firstItem="yBp-dn-bWg" firstAttribute="leading" secondItem="9KF-K0-3gV" secondAttribute="trailing" constant="5" id="ys7-0L-VYc"/>
@@ -150,10 +172,13 @@
                 <outlet property="editBtn" destination="KGk-hl-i60" id="8a9-kt-B88"/>
                 <outlet property="jia" destination="qh5-hh-SOA" id="CAQ-14-e53"/>
                 <outlet property="jian" destination="9KF-K0-3gV" id="xcT-iX-Jyw"/>
+                <outlet property="promotionLabel" destination="yfL-9A-c3s" id="JnJ-fH-ZBB"/>
                 <outlet property="selectImage" destination="4l8-1m-mxj" id="eUS-Pt-438"/>
+                <outlet property="signLabel" destination="0Ub-yT-kV7" id="uOb-5d-gRM"/>
                 <outlet property="titleLabel" destination="lBt-v1-3Gw" id="vQt-ia-xHx"/>
                 <outlet property="unitPriceLabel" destination="ia6-VC-PQZ" id="ict-et-ZNc"/>
             </connections>
+            <point key="canvasLocation" x="52.799999999999997" y="76.46176911544228"/>
         </tableViewCell>
     </objects>
     <resources>
